--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,18 +1,39 @@
 html,
 body {
-  padding: 0 1rem;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: #333;
-    color: #ccc;
+	padding: 0 1rem;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	background-color: #333;
+	color: #ccc;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+section.siteHeader {
+	nav {
+		background: #222;
+		padding: .5rem 1rem;
+		display: flex;
+		gap: 1rem;
+
+		a.active {
+			color: rgb(199, 168, 83);
+		}
+	}
+}
+
+section.sitePage {
+	background-color: #303030;
+	padding: 1rem 2rem;
+	margin-top: 1rem;
+	border-radius: 1rem;
+	box-shadow: 1px 1px 10px #444;
 }
