--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,3 +1,8 @@
 p.normal {
-	color: red;
+	color: #aaa;
+	font-size: 1.5rem;
+	margin-top: .5rem;
+}
+img.normal {
+	box-shadow: 1px 1px 10px rgb(90, 89, 89);
 }
